<resources>
    <string name="app_name">KvizoviAkt</string>
    <string name="uvezi_kviz">Uvezi Kviz</string>
    <string name="dodaj_kviz">Dodaj Kviz</string>
    <string name="pitanja_u_kvizu">Pitanja u kvizu</string>
    <string name="moguca_pitanja">Moguca pitanja</string>
    <string name="odgovori">Odgovori</string>
    <string name="dodaj_odgovor">Dodaj</string>
    <string name="dodaj_tacan">Dodaj tacan</string>
    <string name="spasi_pitanje">Spasi pitanje</string>
    <string name="dodaj_ikonu">Dodaj Ikonu</string>
    <string name="spasi_kategoriju">Spasi Kategriju</string>
    <string name="zavrsi_kviz">Završi kviz</string>

</resources>
