<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="Naziv pitanja - INPUT"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="#cccccc" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/odgovori"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black" />

    <ListView
        android:id="@+id/lvOdgovori"
        android:layout_width="match_parent"
        android:layout_height="145dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black" />

    <EditText
        android:id="@+id/etOdgovor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="Odgovor"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="#cccccc" />

    <Button
        android:id="@+id/btnDodajOdgovor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/button"
        android:text="@string/dodaj_odgovor" />

    <Button
        android:id="@+id/btnDodajTacan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/dodaj_tacan" />


    <Button
        android:id="@+id/btnDodajPitanje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/spasi_pitanje" />



</LinearLayout>