<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spKategorije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="Naziv kviza - INPUT"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="#cccccc"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="106">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/pitanja_u_kvizu"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@android:color/black" />

        <ListView
            android:id="@+id/lvDodanaPitanja"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="35"
            android:divider="#CCCCCC"
            android:dividerHeight="1dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/moguca_pitanja"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@android:color/black" />

        <ListView
            android:id="@+id/lvMogucaPitanja"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="30"
            android:divider="#CCCCCC"
            android:dividerHeight="1dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/btnDodajKviz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/dodaj_kviz"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnImportKviz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/uvezi_kviz"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>

